--- a/src/www/style.css
+++ b/src/www/style.css
@@ -21,11 +21,14 @@ input,select { background-color:white; height:1.5em; }
 	100% { transform: rotate(360deg); }
 }
 
-/* loader section */
+/* loader styles */
 #loader { position:fixed; z-index:100; top:0; left:0; width:100vw; height:100vh; opacity: .99; }
 #loader div { width:100%; height:100%; background-color:floralwhite; opacity: .2; }
 #loader div + div { opacity: 1; position:fixed; top: calc(50vh - 3em); left: calc(50vw - 3em); width: 6em; height: 6em; border-radius: 50%; border: 0.8em solid whitesmoke; border-top: 0.8em solid forestgreen; border-bottom: 0.8em solid forestgreen; animation: spin 1s linear alternate infinite; }
 #loader div + div + div { opacity: 1; position:fixed; top: calc(50vh - 2em); left: calc(50vw - 2em); width: 4em; height: 4em; border-radius: 50%; border: 0.7em solid whitesmoke; border-right: 0.7em solid darkolivegreen; border-left: 0.7em solid darkolivegreen; animation: spin 1s linear alternate-reverse infinite; }
+
+/* drop-list styles */
+#drop-list { position:absolute; max-height:80%; padding:.3em; overflow:auto; border:0.1em green solid; background-color: #dfffdf; z-index:5555; }
 
 /* header styles */
 #header { width:100%; height: 3em; background: linear-gradient(to right, forestgreen, limegreen); background-color:green; margin-bottom: 0.6em; }
